ZMQ connectors added to CMakeFiles

--- a/src/jsonrpccpp/CMakeLists.txt
+++ b/src/jsonrpccpp/CMakeLists.txt
@@ -57,6 +57,20 @@ if (UNIX_DOMAIN_SOCKET_CLIENT)
         list(APPEND client_connector_source "client/connectors/unixdomainsocketclient.cpp")
 endif()
 
+# setup sources for zeromq connectors
+if (ZEROMQ_SERVER)
+        list(APPEND server_connector_header "server/connectors/zeromqserver.h")
+        list(APPEND server_connector_source "server/connectors/zeromqclient.cpp")
+        list(APPEND server_connector_libs ${CMAKE_THREAD_LIBS_INIT}
+            ${ZMQ_LIBRARIES)
+endif()
+
+if (ZEROMQ_CLIENT)
+        list(APPEND client_connector_header "client/connectors/zeromqclient.h")
+        list(APPEND client_connector_source "client/connectors/zeromqclient.cpp")
+        list(APPEND client_connector_libs ${ZMQ_LIBRARIES})
+endif()
+
 # configure a header file to pass some of the CMake settings to the source code
 # TODO: move it to custom build step?
 file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/gen/jsonrpccpp/common")
