--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@ if(UNIX)
 endif(UNIX)
 set(HTTP_SERVER YES CACHE BOOL "Include HTTP server using libmicrohttpd")
 set(HTTP_CLIENT YES CACHE BOOL "Include HTTP client support using curl")
+set(ZEROMQ_SERVER YES CACHE BOOL "Include ZeroMQ REP server")
+set(ZEROMQ_CLIENT YES CACHE BOOL "Include ZeroMQ REQ client")
 set(COMPILE_TESTS YES CACHE BOOL "Compile test framework")
 set(COMPILE_STUBGEN YES CACHE BOOL "Compile the stubgenerator")
 set(COMPILE_EXAMPLES YES CACHE BOOL "Compile example programs")
@@ -41,6 +43,8 @@ if(UNIX)
     message(STATUS "UNIXDOMAINSOCKET_SERVER: ${UNIX_DOMAIN_SOCKET_SERVER}")
     message(STATUS "UNIXDOMAINSOCKET_CLIENT: ${UNIX_DOMAIN_SOCKET_CLIENT}")
 endif(UNIX)
+message(STATUS "ZEROMQ_SERVER: ${ZEROMQ_SERVER}")
+message(STATUS "ZEROMQ_CLIENT: ${ZEROMQ_CLIENT}")
 message(STATUS "COMPILE_TESTS: ${COMPILE_TESTS}")
 message(STATUS "COMPILE_STUBGEN: ${COMPILE_STUBGEN}")
 message(STATUS "COMPILE_EXAMPLES: ${COMPILE_EXAMPLES}")
