--- a/src/jsonrpccpp/CMakeLists.txt
+++ b/src/jsonrpccpp/CMakeLists.txt
@@ -57,17 +57,17 @@ if (UNIX_DOMAIN_SOCKET_CLIENT)
         list(APPEND client_connector_source "client/connectors/unixdomainsocketclient.cpp")
 endif()
 
-# setup sources for zeromq connectors
-if (ZEROMQ_SERVER)
-        list(APPEND server_connector_header "server/connectors/zeromqserver.h")
-        list(APPEND server_connector_source "server/connectors/zeromqserver.cpp")
+# setup sources for zmq connectors
+if (ZMQ_SERVER)
+        list(APPEND server_connector_header "server/connectors/zmqserver.h")
+        list(APPEND server_connector_source "server/connectors/zmqserver.cpp")
         list(APPEND server_connector_libs ${CMAKE_THREAD_LIBS_INIT}
             ${ZMQ_LIBRARIES})
 endif()
 
-if (ZEROMQ_CLIENT)
-        list(APPEND client_connector_header "client/connectors/zeromqclient.h")
-        list(APPEND client_connector_source "client/connectors/zeromqclient.cpp")
+if (ZMQ_CLIENT)
+        list(APPEND client_connector_header "client/connectors/zmqclient.h")
+        list(APPEND client_connector_source "client/connectors/zmqclient.cpp")
         list(APPEND client_connector_libs ${ZMQ_LIBRARIES})
 endif()
 
