--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -64,10 +64,10 @@ if(HTTP_CLIENT AND HTTP_SERVER AND COMPILE_STUBGEN)
         add_test(NAME integration WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite "[integration]")
 endif()
 
-if(ZEROMQ_CLIENT AND ZEROMQ_SERVER)
-        add_test(NAME connector_zeromq WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+if(ZMQ_CLIENT AND ZMQ_SERVER)
+        add_test(NAME connector_zmq WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
             COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite
-            "[connector_zeromq]")
+            "[connector_zmq]")
 endif()
 
 add_test(NAME all WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite)
