Tests really runs, threaded and non-threaded ZMQServer can operate request with ZMQClient

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -27,6 +27,10 @@ if(COMPILE_STUBGEN)
 	add_definitions(-DSTUBGEN_TESTING)
 endif()
 
+if(ZMQ_CLIENT AND ZMQ_SERVER)
+    add_definitions(-DZMQCONNECTORS_TESTING)
+endif()
+
 add_executable(unit_testsuite ${test_source})
 target_link_libraries(unit_testsuite jsonrpccommon)
 target_link_libraries(unit_testsuite jsonrpcserver)
