--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,8 @@ if(UNIX)
 	set(UNIX_DOMAIN_SOCKET_SERVER YES CACHE BOOL "Include Unix Domain Socket server")
 	set(UNIX_DOMAIN_SOCKET_CLIENT YES CACHE BOOL "Include Unix Domain Socket client")
 endif(UNIX)
-set(TCP_SOCKET_SERVER YES CACHE BOOL "Include Tcp Socket server")
-set(TCP_SOCKET_CLIENT YES CACHE BOOL "Include Tcp Socket client")
+set(TCP_SOCKET_SERVER NO CACHE BOOL "Include Tcp Socket server")
+set(TCP_SOCKET_CLIENT NO CACHE BOOL "Include Tcp Socket client")
 set(HTTP_SERVER YES CACHE BOOL "Include HTTP server using libmicrohttpd")
 set(HTTP_CLIENT YES CACHE BOOL "Include HTTP client support using curl")
 set(COMPILE_TESTS YES CACHE BOOL "Compile test framework")
