--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,9 @@
 language: cpp
 
-addons:
-  apt:
-    - ubuntu-toolchain-r-test
-  packages:
-    - gcc-4.9
-    - g++-4.9
-    - clang
-    - valgrind
-
 before_install:
+ - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
  - sudo apt-get update -qq
- - sudo apt-get install -qq libcurl4-openssl-dev libjsoncpp-dev libargtable2-dev libgnutls-dev libgcrypt11-dev valgrind wget
+ - sudo apt-get install -qq libcurl4-openssl-dev libjsoncpp-dev libargtable2-dev libgnutls-dev libgcrypt11-dev valgrind wget gcc-4.8 g++-4.8
  - wget http://ftp.gnu.org/gnu/libmicrohttpd/libmicrohttpd-0.9.44.tar.gz
  - tar -xvf libmicrohttpd-0.9.44.tar.gz
  - cd libmicrohttpd-0.9.44
@@ -21,7 +13,7 @@ before_install:
  - sudo pip install cpp-coveralls
 
 install:
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
 
 env:
  - HTTP_SERVER=YES HTTP_CLIENT=YES COMPILE_STUBGEN=YES
