cmake: Fix respecting LIBDIR_SUFFIX for non-Debian multilib support
Fixes: cafb6c1286cad024f3e77275914d595ca658162d
Fixes: 77ecb82e491535968c41d9b305afdf009b04f35c

--- a/src/stubgenerator/CMakeLists.txt
+++ b/src/stubgenerator/CMakeLists.txt
@@ -65,8 +65,8 @@ install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/stubgenerator/
         FILES_MATCHING PATTERN "*.h")
 
 install(TARGETS ${ALL_LIBS} jsonrpcstub
-        LIBRARY DESTINATION lib/${CMAKE_LIBRARY_PATH}
-        ARCHIVE DESTINATION lib/${CMAKE_LIBRARY_PATH}
+        LIBRARY DESTINATION lib${LIB_SUFFIX}/${CMAKE_LIBRARY_PATH}
+        ARCHIVE DESTINATION lib${LIB_SUFFIX}/${CMAKE_LIBRARY_PATH}
         RUNTIME DESTINATION bin
 )
 
