--- a/src/jsonrpccpp/version.h.in
+++ b/src/jsonrpccpp/version.h.in
@@ -3,7 +3,7 @@
  *************************************************************************
  * @file    version.h.in
  * @date    12.05.2013
- * @author  Peter Spiess-Knafl <peter.knafl@gmail.com>
+ * @author  Peter Spiess-Knafl <dev@spiessknafl.at>
  * @license See attached LICENSE.txt
  ************************************************************************/
 
