--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,30 @@ CMakeLists.txt.user*
 src/examples/gen/*
 *~
 
-# misc
-bin
-win32-deps
+# CMake
+CMakeFiles
+CMakeCache.txt
+*.cmake
+*.pc
 
 # Visual Studio files
+/.vscode
+*.sln
+*.vcxproj
 *.suo
 *.sdf
 *.opensdf
+*.obj
+*.log
+*.tlog
+*.filters
+Win32
+
+# misc
+bin
+lib
+gen
+win32-deps
+catch/
+**/*.dir/*
+*spec*.json
