--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,30 @@ src/examples/gen/*
 *.tar.gz
 *.asc
 
-# misc
-bin
-win32-deps
+# CMake
+CMakeFiles
+CMakeCache.txt
+*.cmake
+*.pc
 
 # Visual Studio files
+/.vscode
+*.sln
+*.vcxproj
 *.suo
 *.sdf
 *.opensdf
+*.obj
+*.log
+*.tlog
+*.filters
+Win32
+
+# misc
+bin
+lib
+gen
+win32-deps
+catch/
+**/*.dir/*
+*spec*.json
