--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,13 @@ set(MINOR_VERSION 7)
 set(PATCH_VERSION 0)
 set(SO_VERSION    0)
 
-set(BUILD_SHARED_LIBS YES CACHE BOOL "Build shared libraries")
-set(BUILD_STATIC_LIBS NO CACHE BOOL "Build static libraries")
+if(NOT MSVC)
+	set(BUILD_SHARED_LIBS YES CACHE BOOL "Build shared libraries")
+	set(BUILD_STATIC_LIBS NO CACHE BOOL "Build static libraries")
+else()
+	set(BUILD_SHARED_LIBS NO CACHE BOOL "Build shared libraries")
+	set(BUILD_STATIC_LIBS YES CACHE BOOL "Build static libraries")
+endif()
 set(LIB_SUFFIX "" CACHE STRING "Suffix for library directory (32/64)")
 
 if (NOT BUILD_SHARED_LIBS AND NOT BUILD_STATIC_LIBS)
