--- a/src/stubgenerator/CMakeLists.txt
+++ b/src/stubgenerator/CMakeLists.txt
@@ -17,7 +17,7 @@ if (BUILD_SHARED_LIBS)
 endif()
 
 # setup static common library
-if (BUILD_STATIC_LIBS)
+if (BUILD_STATIC_LIBS OR MSVC)
         add_library(libjsonrpcstubStatic STATIC ${jsonrpcstub_source} ${jsonrpcstub_header} ${jsonrpc_helper_source_common})
         target_link_libraries(libjsonrpcstubStatic jsonrpccommonStatic ${JSONCPP_LIBRARIES} ${ARGTABLE_LIBRARIES})
         set_target_properties(libjsonrpcstubStatic PROPERTIES OUTPUT_NAME jsonrpccpp-stub)
@@ -37,8 +37,11 @@ set_target_properties(
 
 
 add_executable(jsonrpcstub main.cpp)
-target_link_libraries(jsonrpcstub jsonrpccommon libjsonrpcstub )
-
+if (BUILD_STATIC_LIBS AND NOT BUILD_SHARED_LIBS)
+        target_link_libraries(jsonrpcstub jsonrpccommonStatic libjsonrpcstubStatic )
+else()
+        target_link_libraries(jsonrpcstub jsonrpccommon libjsonrpcstub )
+endif()
 #Generate manpage
 if (NOT ${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
 	configure_file("${CMAKE_SOURCE_DIR}/doc/manpage.in" "${CMAKE_BINARY_DIR}/manpage" @ONLY)
