--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -37,6 +37,10 @@ if(UNIX_DOMAIN_SOCKET_SERVER AND UNIX_DOMAIN_SOCKET_CLIENT)
     add_definitions(-DUNIXDOMAINSOCKET_TESTING)
 endif()
 
+if(FILE_DESCRIPTOR_SERVER AND FILE_DESCRIPTOR_CLIENT)
+    add_definitions(-DFILEDESCRIPTOR_TESTING)
+endif()
+
 if(TCP_SOCKET_SERVER AND TCP_SOCKET_CLIENT)
     add_definitions(-DTCPSOCKET_TESTING)
 endif()
@@ -75,6 +79,10 @@ endif()
 
 if (UNIX_DOMAIN_SOCKET_CLIENT AND UNIX_DOMAIN_SOCKET_SERVER)
         add_test(NAME connector_unixdomainsocket WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite "[connector_unixdomainsocket]")
+endif()
+
+if (FILE_DESCRIPTOR_CLIENT AND FILE_DESCRIPTOR_SERVER)
+        add_test(NAME connector_filedescriptor WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite "[connector_filedescriptor]")
 endif()
 
 if (TCP_SOCKET_CLIENT AND TCP_SOCKET_SERVER)
