CMake: Use imported target to manage CURL dependency

--- a/src/jsonrpccpp/CMakeLists.txt
+++ b/src/jsonrpccpp/CMakeLists.txt
@@ -36,8 +36,7 @@ set(server_connector_libs   "")
 if (HTTP_CLIENT)
 	list(APPEND client_connector_header "client/connectors/httpclient.h")
 	list(APPEND client_connector_source "client/connectors/httpclient.cpp")
-	list(APPEND client_connector_libs ${CURL_LIBRARIES})
-    include_directories(${CURL_INCLUDE_DIRS})
+	list(APPEND client_connector_libs CURL::libcurl)
 endif()
 
 if (HTTP_SERVER)
