CMake: fix dependencies in exported config

--- a/cmake/jsonrpccppConfig.cmake.in
+++ b/cmake/jsonrpccppConfig.cmake.in
@@ -1,11 +1,21 @@
 @PACKAGE_INIT@
 
 include(CMakeFindDependencyMacro)
+
 find_dependency(Threads)
-# TODO: add jsoncpp dependency
-if(@HTTP_CLIENT@)
-  find_dependency(CURL)
+
+if(@HUNTER_ENABLED@)
+  find_package(jsoncpp CONFIG REQUIRED)
 endif()
+
+if(@HTTP_CLIENT@)
+  if(@HUNTER_ENABLED@)
+    find_package(CURL CONFIG REQUIRED)
+  else()
+    find_dependency(CURL)
+  endif()
+endif()
+
 if(@HTTP_SERVER@)
   find_dependency(MHD)
 endif()
