--- a/src/jsonrpccpp/CMakeLists.txt
+++ b/src/jsonrpccpp/CMakeLists.txt
@@ -202,7 +202,7 @@ if (WIN32)
 	install(DIRECTORY ${CMAKE_SOURCE_DIR}/win32-deps/include DESTINATION .)
 endif()
 
-install(TARGETS ${ALL_LIBS} EXPORT jsonrpccppTargets
+install(TARGETS ${ALL_LIBS} EXPORT libjson-rpc-cppTargets
 	LIBRARY DESTINATION lib${LIB_SUFFIX}/${CMAKE_LIBRARY_PATH}
 	ARCHIVE DESTINATION lib${LIB_SUFFIX}/${CMAKE_LIBRARY_PATH}
 	RUNTIME DESTINATION bin
