Added stubs for redis connector client
The redis connector will allow the rpc messages to be sent using a redis
queue.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,8 @@ endif(UNIX)
 
 set(TCP_SOCKET_SERVER NO CACHE BOOL "Include Tcp Socket server")
 set(TCP_SOCKET_CLIENT NO CACHE BOOL "Include Tcp Socket client")
+set(REDIS_SERVER YES CACHE BOOL "Include Redis server using hiredis")
+set(REDIS_CLIENT YES CACHE BOOL "Include Redis client using hiredis")
 set(HTTP_SERVER YES CACHE BOOL "Include HTTP server using libmicrohttpd")
 set(HTTP_CLIENT YES CACHE BOOL "Include HTTP client support using curl")
 set(COMPILE_TESTS YES CACHE BOOL "Compile test framework")
@@ -61,6 +63,8 @@ message(STATUS "TCP_SOCKET_SERVER: ${TCP_SOCKET_SERVER}")
 message(STATUS "TCP_SOCKET_CLIENT: ${TCP_SOCKET_CLIENT}")
 message(STATUS "HTTP_SERVER: ${HTTP_SERVER}")
 message(STATUS "HTTP_CLIENT: ${HTTP_CLIENT}")
+message(STATUS "REDIS_SERVER: ${REDIS_SERVER}")
+message(STATUS "REDIS_CLIENT: ${REDIS_CLIENT}")
 if(UNIX)
     message(STATUS "UNIXDOMAINSOCKET_SERVER: ${UNIX_DOMAIN_SOCKET_SERVER}")
     message(STATUS "UNIXDOMAINSOCKET_CLIENT: ${UNIX_DOMAIN_SOCKET_CLIENT}")
