--- a/src/jsonrpccpp/CMakeLists.txt
+++ b/src/jsonrpccpp/CMakeLists.txt
@@ -47,6 +47,15 @@ if (HTTP_SERVER)
 	list(APPEND server_connector_libs ${CMAKE_THREAD_LIBS_INIT} ${MHD_LIBRARIES})
 endif()
 
+# setup sources for redis connectors
+if (REDIS_CLIENT)
+    list(APPEND client_connector_header "client/connectors/redisclient.h")
+    list(APPEND client_connector_source "client/connectors/redisclient.cpp")
+endif()
+
+if (REDIS_SERVER)
+endif()
+
 # setup sources for unix domain socket connectors
 if (UNIX_DOMAIN_SOCKET_SERVER)
     list(APPEND server_connector_header "server/connectors/unixdomainsocketserver.h")
