Added redis server connector
Added the server connector and its implementation. The server listens
for changes to a redis queue and sends its responses to the specified
redis queue. Also now that we have both a client and a server connector
the unit/integration tests can be fleshed out.

--- a/src/jsonrpccpp/CMakeLists.txt
+++ b/src/jsonrpccpp/CMakeLists.txt
@@ -56,7 +56,9 @@ if (REDIS_CLIENT)
 endif()
 
 if (REDIS_SERVER)
-    list(APPEND server_connector_libs ${HIREDIS_LIBRARIES})
+    list(APPEND server_connector_header "server/connectors/redisserver.h")
+    list(APPEND server_connector_source "server/connectors/redisserver.cpp")
+    list(APPEND server_connector_libs ${CMAKE_THREAD_LIBS_INIT} ${HIREDIS_LIBRARIES})
 endif()
 
 # setup sources for unix domain socket connectors
