--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -33,7 +33,11 @@ else()
 endif()
 
 if(REDIS_CLIENT AND REDIS_SERVER)
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/redis.conf DESTINATION ${CMAKE_BINARY_DIR})
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/redis.conf DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
     add_definitions(-DREDIS_TESTING)
+else()
+    list(REMOVE_ITEM test_source "${CMAKE_CURRENT_SOURCE_DIR}/testredisserver.cpp")
 endif()
 
 if(UNIX_DOMAIN_SOCKET_SERVER AND UNIX_DOMAIN_SOCKET_CLIENT)
